<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/global_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/global_padding"
        android:paddingRight="@dimen/global_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/reportTeam_filterClearButton"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/report_team_filter_clear" />

            <Button
                android:id="@+id/reportTeam_filterHideButton"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/global_padding"
                android:text="@string/report_team_filter_hide" />

            <TextView
                android:id="@+id/reportTeam_filterStatusTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/global_padding"
                android:gravity="right"
                android:text="dummy_filter_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/reportTeam_filterNumberPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding" >

                <TextView
                    android:layout_width="75dip"
                    android:layout_height="wrap_content"
                    android:text="@string/report_team_filter_number" />

                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                    android:id="@+id/reportTeam_filterNumberEdit"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoEnterAction"
                    android:inputType="number"
                    android:maxLength="4" />

                <CheckBox
                    android:id="@+id/reportTeam_filterNumberExactCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_padding"
                    android:text="@string/report_team_filter_number_exact" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reportTeam_filterTeamAndMemberPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding" >

                <TextView
                    android:layout_width="75dip"
                    android:layout_height="wrap_content"
                    android:text="@string/report_team_filter_team" />

                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                    android:id="@+id/reportTeam_filterTeamEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone|flagNoEnterAction"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="75dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_padding"
                    android:text="@string/report_team_filter_member" />

                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                    android:id="@+id/reportTeam_filterMemberEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone|flagNoEnterAction"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_padding" >

        <Button
            android:id="@+id/reportTeam_sortByNumberButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="left|center_vertical"
            android:text="@string/report_team_sort_num" />

        <Button
            android:id="@+id/reportTeam_sortByTeamButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/report_team_sort_team" />

        <Button
            android:id="@+id/reportTeam_sortByMemberButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/report_team_sort_member" />
    </LinearLayout>

    <ListView
        android:id="@+id/reportTeam_teamsList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:choiceMode="singleChoice" >
    </ListView>

    <LinearLayout
        android:id="@+id/reportTeam_progressPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/global_padding"
        android:layout_marginTop="@dimen/global_padding" >

        <ProgressBar
            android:id="@+id/reportTeam_resultWaitingProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>