<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/global_padding"
    android:paddingLeft="@dimen/global_padding"
    android:paddingRight="@dimen/global_padding"
    android:paddingTop="@dimen/global_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/inputWithdraw_teamNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/input_withdraw_no_team" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding" >

            <TextView
                android:id="@+id/inputWithdraw_memberColumnTextView"
                android:layout_width="0dip"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_weight="50"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/input_withdraw_member_column"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/inputWithdraw_withdrawColumnTextView"
                android:layout_width="0dip"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_weight="20"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/input_withdraw_withdraw_column"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/inputWithdraw_withdrawColumnTextView"
                android:layout_width="0dip"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:layout_weight="30"
                android:gravity="center_horizontal|center_vertical"
                android:text="" />
        </LinearLayout>

        <ListView
            android:id="@+id/inputWithdraw_withdrawList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/inputWithdraw_resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/global_padding"
            android:text="@string/input_withdraw_no_result" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/global_padding" >

            <Button
                android:id="@+id/inputWithdraw_okButton"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/input_withdraw_ok" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>