<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/global_padding"
    android:paddingRight="@dimen/global_padding"
    android:paddingTop="@dimen/global_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inputStart_scanPointLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/input_start_no_scan_point"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/inputStart_selectScanPointBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/input_start_select_scan_point" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/inputStart_proceedInputBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/input_start_proceed_input" />
    </LinearLayout>

</LinearLayout>